cloud/dataplatform/connman/infra/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connman
spec:
  replicas: 3
  selector:
    matchLabels:
      app: connman
  template:
    metadata:
      labels:
        app: connman
    spec:
      containers:
        - name: connman
          image: $DOCKER_IMAGE
          ports:
            - containerPort: 80
              name: http
            - containerPort: 8787
              name: grpc
