cloud/dataplatform/connman/infra/k8s/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connman-grpc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grpc.$DOMAIN
      secretName: connman-tls
  rules:
    - host: grpc.$DOMAIN
      http:
        paths:
          - backend:
              service:
                name: connman-cluster-ip
                port:
                  number: 8787
            pathType: Prefix
            path: /
