cloud/dataplatform/connman/infra/k8s/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connman-http
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - $DOMAIN
      secretName: connman-tls
  rules:
    - host: $DOMAIN
      http:
        paths:
          - backend:
              service:
                name: connman-cluster-ip
                port:
                  number: 80
            pathType: Prefix
            path: /
